TEST_PROGRAMS/INVALID/narges_aghakazemjourabbaf/incorect2.min
if x then
print x;
end

